2013-10-05 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: By default don't build non-Latin1 manuals. There are
	  still too many old perl/pod2man versions around (perl < 5.10.1).
	  Add MAN_NONLATIN=1 to enable non-Latin1 manuals.

2013-10-01 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/Makefile: Support non-Latin1 man pages.
	* Makefile: Support non-Latin1 man pages.
	* man/nonlatin/man1/ru/dos2unix.pod: Placeholder for Russian manual.

2013-09-13 Андрей Углик (Andrei Uhlik) <uglika@gmail.com>
	* po/ru.po: New Russian translation of the messages.

2013-08-05 Erwin Waterlander <waterlan@xs4all.nl>
	* po/de.po: Update German translations. Thanks to Lars Wendler.

2013-06-14 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: New options -ul and -ub to convert
	  UTF-16 files without BOM.

2013-06-11 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: Print value of binary symbol
	  when found.

2013-03-12 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Set CC to gcc for MSYS target. Otherwise
	  /mingw/bin/cc is used.

2013-01-27 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile:
	  - CC and CPP can be overridden by environment.
	  - CFLAGS optimization flags can be overridden by environment.
	  - Separate LIBS from LDFLAGS.
	  Thanks to Justin Lecher <jlec@gentoo.org>

2013-01-25 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 6.0.3

2013-01-18 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: Print system error when writing to
	  temporary output file fails.

2013-01-16 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: Print system error when closing of
	  temporary output file fails. E.g. "No space left on device".

2012-12-25 Erwin Waterlander <waterlan@xs4all.nl>
	* querycp.c/h: Added public domain phrase for Debian
	  license check.

2012-12-12 Erwin Waterlander <waterlan@xs4all.nl>
	* test: New directory with some test files.

2012-09-20 Erwin Waterlander <waterlan@xs4all.nl>